# osnake

./: .gitignore  LICENSE  dune-project  osnake.opam
lib/: ai.ml  ai.mli  common.ml  common.mli  controller.ml  controller.mli  dune  game.ml  game.mli  player.ml  player.mli  state.ml  state.mli  view.ml  view.mli
test/: dune
