(lang dune 3.7)

(name osnake)

(generate_opam_files true)

(source
 (github hitgif/osnake))

(authors "HITGIF")

(maintainers "HITGIF")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name osnake)
 (synopsis "Snake game in OCaml")
 (depends ocaml dune)
 (tags
  (snake ocaml)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
